# nps-surfer

./: .gitignore  CMakeLists.txt
src/: category.h  dataloader.cpp  dataloader.h  downloader.cpp  downloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui  progressitem.cpp  progressitem.h  progresslistmodel.cpp  progresslistmodel.h  title.h  titletablemodel.cpp  titletablemodel.h
